# zkir-prover

./: Cargo.toml  README.md
src/: lib.rs  trace.rs
src/chips/: mod.rs
src/chips/cpu/: air.rs  columns.rs  mod.rs  trace.rs
src/chips/memory/: mod.rs
src/chips/syscall/: mod.rs  poseidon.rs  sha256.rs
